# offline-ledger

./: .gitignore  CHANGELOG.md  FINAL_STATUS.md  MIGRATION_TO_UV.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  TROUBLESHOOTING.md  plan.md  pyproject.toml
app/: app.py  components.py  dashboard.py  i18n.py  reports.py  settings.py  state.py
scripts/: compile_check.py
