[project]
name = "offline-ledger"
version = "0.1.0"
description = "A feature-complete, offline-first double-entry accounting application built with Reflex"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "reflex>=0.8.15a1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
only-packages = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

